syntax = "proto3";

package api.customer;

// 导入包
import "google/api/annotations.proto";

option go_package = "customer/api/customer;customer";

service Customer {
	// 获取验证码
	rpc GetVerifyCode (GetVerifyCodeReq) returns (GetVerifyCodeResp) {
		// 这意味着这个RPC方法可以通过HTTP协议进行访问
		option (google.api.http) = {
			get: "/customer/get-verify-code/{telephone}"
		};
	}

	// 登录
	rpc Login (LoginReq) returns (LoginResp) {
		option (google.api.http) = {
			post: "/customer/login",
			body: "*",
		};
	}

	// 退出登陆
	rpc Logout (LogoutReq) returns (LogoutResp) {
		option (google.api.http) = {
			get: "/customer/logout",
		};
	}

	// 价格预估
	rpc EstimatePrice (EstimatePriceReq) returns (EstimatePriceResp) {
		option (google.api.http) = {
			get: "/customer/estimate-price/{origin}/{destination}",
		};
	}
}

// 获取验证码的消息
message GetVerifyCodeReq {
	string telephone = 1;
}
message GetVerifyCodeResp {
	int64 code = 1;
	string message = 2;
	// 验证码
	string verify_code = 3;
	// 生成时间 unix timestamp
	int64 verify_code_time = 4;
	// 有效期，单位 second
	int32 verify_code_life = 5;
};

// 登录的消息
message LoginReq {
	string telephone = 1;
	string verify_code = 2;
};
message LoginResp {
	int64 code = 1;
	string message = 2;
	// token,登录表示，特殊的字符串，JWT 编码格式
	string token = 3;
	// 生成时间 unix timestamp
	int64 token_create_at = 4;
	// 有效期，单位 second
	int32 token_life = 5;
}

message LogoutReq {
};
message LogoutResp {
	int64 code = 1;
	string message = 2;
};

message EstimatePriceReq {
	string origin = 1;
	string destination = 2;
};

message EstimatePriceResp {
	int64 code = 1;
	string message = 2;
	string origin = 3;
	string destination = 4;
	int64 price = 5;
};