syntax = "proto3";

package api.verifyCode;

option go_package = "driver/api/verifyCode;verifyCode";

service VerifyCode {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
}

enum TYPE {
	DEFAULT = 0;
	DIGIT = 1;
	LETTER = 2;
	MIXED = 3;
}

// 接口请求参数结构
message GetVerifyCodeRequest {
	uint32 length = 1;
	TYPE type = 2;
}

// 接口返回值结构
message GetVerifyCodeReply {
	string code = 1;
}
